# factor-graph

./: Contents.m  README.md  TODO.md  algonquin.cpp  algonquin.h  algonquinnetwork.h  dirichlet.h  discrete.h  discretearray.cpp  discretearray.h  examples.cpp  examples.h  gamma.h  gammaarray.h  gaussian.cpp  gaussian.h  gaussianarray.cpp  gaussianarray.h  gaussianmixture.h  installFFG.m  main.cpp  mathutil.cpp  mathutil.h  mixture.h  mvalgonquin.cpp  mvalgonquin.h  mvgaussian.h  network.cpp  network.h  noisybin.txt  speechbin.txt  util.h  variable.cpp  variable.h  vmp.pro  wishart.h
+ffg/: AddNode.m  (+14 more)
code/cpp-factor-graph/: CMakeLists.txt  addnode.cpp  addnode.h  cpp-factor-graph.pro  equalitynode.cpp  equalitynode.h  evidencenode.h  factorgraph.h  factornode.cpp  factornode.h  main.cpp  message.cpp  message.h  multiplicationnode.h  network.h  util.h
cpp-factor-graph/: CMakeLists.txt  Makefile.linux  Makefile.win64  cpp-factor-graph.pro
cpp-factor-graph/src/: addmultnode.cpp  addmultnode.h  addnode.cpp  addnode.h  dynamicnetwork.cpp  equalitynode.cpp  equalitynode.h  equmultnode.cpp  equmultnode.h  estimatemultiplicationnode.cpp  estimatemultiplicationnode.h  evidencenode.h  factorgraph.h  factornode.cpp  factornode.h  main.cpp  matrix.h  matrixutil.h  message.cpp  message.h  multiplicationnode.cpp  multiplicationnode.h  network.h  util.h
cpp-factor-graph/tests/: ar_test.h  dynamicnetwork_test.h  equalitynode_test.h  esitmatemultiplicationnode_test.h  kalmanfilter_test.h  main.cpp  matrixutil_test.h  multiplicationnode_test.h  schedule_test.h  util_test.h
(+250 files in other folders)
